NetBSD Problem Report #56331

From paul@whooppee.com  Sun Jul 25 14:22:54 2021
Return-Path: <paul@whooppee.com>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id ABA461A921F
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 25 Jul 2021 14:22:54 +0000 (UTC)
Message-Id: <20210725142251.E9DCD30F2C4@speedy.whooppee.com>
Date: Sun, 25 Jul 2021 07:22:51 -0700 (PDT)
From: paul@whooppee.com
Reply-To: paul@whooppee.com
To: gnats-bugs@NetBSD.org
Subject: Awkward % displays from ``systat vm''
X-Send-Pr-Version: 3.95

>Number:         56331
>Category:       bin
>Synopsis:       Awkward % displays from ``systat vm''
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jul 25 14:25:00 +0000 2021
>Closed-Date:    Sat Aug 21 13:40:01 +0000 2021
>Last-Modified:  Sat Aug 21 13:40:01 +0000 2021
>Originator:     Paul Goyette
>Release:        NetBSD 9.99.87
>Organization:
+--------------------+--------------------------+----------------------+
| Paul Goyette       | PGP Key fingerprint:     | E-mail addresses:    |
| (Retired)          | FA29 0E3B 35AF E8AE 6651 | paul@whooppee.com    |
| Software Developer | 0786 F758 55DE 53BA 7731 | pgoyette@netbsd.org  |
|                    |                          | pgoyette99@gmail.com |
+--------------------+--------------------------+----------------------+
>Environment:


System: NetBSD speedy.whooppee.com 9.99.87 NetBSD 9.99.87 (SPEEDY 2021-07-23 13:58:03 UTC) #0: Sat Jul 24 00:01:27 UTC 2021 paul@speedy.whooppee.com:/build/netbsd-local/obj/amd64/sys/arch/amd64/compile/SPEEDY amd64
Architecture: x86_64
Machine: amd64
>Description:
	The ``systat vm'' command displays the following lines that
	include percentages (right-hand portion of display elided to
	improve PR formatting):

	...
	Anon      1850084   1%   zero         
	Exec       957036    %   wired   16348
	File      9646848   7%   inact  174800
	Meta      2681265    %   bufs   512218
	...

The Anon-thru-Meta lines display a "naked" percent sign when the value
is zero - displaying ``0%'' would be much more useful, especially when
_all_ of the values are zero.


>How-To-Repeat:
see above

>Fix:


>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56331 CVS commit: src/usr.bin/systat
Date: Sat, 21 Aug 2021 09:22:20 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sat Aug 21 13:22:19 UTC 2021

 Modified Files:
 	src/usr.bin/systat: extern.h main.c systat.1 vmstat.c

 Log Message:
 PR/56331: Paul Goyette: Add -z option to display 0 instead of ' ' in vmstat.


 To generate a diff of this commit:
 cvs rdiff -u -r1.47 -r1.48 src/usr.bin/systat/extern.h
 cvs rdiff -u -r1.55 -r1.56 src/usr.bin/systat/main.c
 cvs rdiff -u -r1.51 -r1.52 src/usr.bin/systat/systat.1
 cvs rdiff -u -r1.89 -r1.90 src/usr.bin/systat/vmstat.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sat, 21 Aug 2021 13:40:01 +0000
State-Changed-Why:
Christos committed a fix


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.