PR/56331: Paul Goyette: Add -z option to display 0 instead of ' ' in vmstat.